update various sections

--- a/about.html
+++ b/about.html
@@ -13,46 +13,60 @@ permalink: /about
 <div class="container">   
   <div class="row">
     <div class="side-left col-sm-4 col-md-4">
-      <h3 class="lead">  About our Firm : </h3><hr>
+      <h3 class="lead"> About The Intersectional Business Academy : </h3><hr>
 
-      <p>Curabitur vulputate, ligula lacinia scelris que tempor, lacus lacus ornare ante, ac egeistas est urna sit amet arcu. Class apte nt taeraciti sociosqu ad litora torquent.</p>
-      <a href="#anchor1"> Our Firm's History</a><br>
-      <a href="#anchor2"> Philosophy</a><br>
-      <a href="#anchor3">Media / In the Press</a><br>
+      <p>
+        The Intersectional Business Academy was founded with one purpose: to make leadership, learning, and business growth accessible for those who juggle it all—busy professionals, entrepreneurs, parents, and community leaders. 
+      </p>
+      <a href="#anchor1"> Our Story</a><br>
+      <a href="#anchor2"> Our Philosophy</a><br>
+      <a href="#anchor3"> Media / In the Press</a><br>
       <br>
-      <h4>2002 - LOREM IPSUM DOLOR :</h4><hr>
-      Nunc eu ullamcorper orci. Quisque eget odio ac lectus vestibulum faucibus eget in metus. In pellentesque faucibus. Nunc eu ullamcor per orci. Quisque eget odio ac lectus vestibulum faucibus eget in metus. In pellentesque faucibus.
+      <h4>2015 - The Spark :</h4><hr>
+      What began as a local initiative to support women leaders grew into a full business academy dedicated to practical leadership education, inclusive systems design, and professional growth. 
     </div>
+
     <div class="col-sm-8 col-md-8">
-        <h3 class="lead"id="anchor1"> Our Firm's History </h3><hr>
+        <h3 class="lead" id="anchor1"> Our Story </h3><hr>
         <p>
-          Curabitur vulputate, ligula lacinia scelrisque tempor, lacus lacus ornare ante, ac egeistas est urna sit amet arcu. Class aptent taeraciti sociosqu ad litora torquent. Hibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Morbi euismod magna ac lorem rutrum elementum. Donec viverra auctor lobortis. Pellentesque eu est a nulla placerat dignissim. Morbi a dolor sit amet lipsum enim in.
+          Founded on the belief that true success blends strategy with humanity, The Intersectional Business Academy emerged as a space where busy leaders and aspiring entrepreneurs could find tools, mentorship, and community support. 
+        </p>
+        <p>
+          Over the years, we have guided hundreds of professionals through transformative programs—supporting startups, advancing women in leadership, shaping inclusive workplace systems, and helping organizations align business intelligence with ethics. 
         </p>
 
-        <h4>2002 - LOREM IPSUM DOLOR</h4>
-        <p>Nunc eu ullamcorper orci. Quisque eget odio ac lectus vestibulum faucibus eget in metus. In pellentesque faucibus. Nunc eu ullamcor per orci. Quisque eget odio ac lectus vestibulum faucibus eget in metus. In pellentesque faucibus.</p>
-
-        <h4>2007 - VIVAMUS HENDERIT</h4>
-        <p>Nullam in dui mauris. Vivamus hendrerit arcu sed erat molestie vehicula. Sed auctor neque eu tellus rhoncus ut eleifend nibh porttitor. Ut in nulla enim. Phasellus molestie magna.</p>
-
-        <h4>2008 - PRAESENT ID METUS</h4>
+        <h4>2015 - The Beginning</h4>
         <p>
-          Sed auctor neque eu tellus rhoncus ut eleifend nibh porttitor. Ut in nulla enim. Phasellus molestie magna non est bibendum non venenatis nisl tempor. Suspendisse dictum feugiat nisl ut dapibus. Mauris iaculis porttitor posuere. Praesent id metus massa, ut blandit odio. Proin quis tortor orci. Etiam at risus et justo dignissim congue. Donec congue lacinia dui, a porttitor lectus condimentum laoreet. Nunc eu ullamcorper orci. Quisque eget odio.
-        </p>
-        <h3 class="lead"id="anchor2">Our Philosophy:</h3>
-        <p>
-          Suspendisse dictum feugiat nisl ut dapibus. Mauris iaculis porttitor posuere. Praesent id metus massa, ut blandit odio. Proin quis tortor orci. Etiam at risus et justo dignissim congue. Donec congue lacinia dui, a porttitor lectus condimentum laoreet. Nunc eu ullamcorper orci. Quisque eget odio ac lectus vestibulum faucibus eget in metus. In pellentesque faucibus vestibulum. Nulla at nulla justo, eget luctus tortor. Nulla facilisi. Duis aliquet egestas purus in blandit.
-          Curabitur vulputate, ligula lacinia scelerisque tempor, lacus lacus ornare ante, ac egestas est urna sit amet arcu. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Sed molestie augue sit amet leo consequat posuere. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Proin vel ante a orci tempus eleifend ut et magna. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus luctus urna sed urna ultricies ac tempor dui sagittis. In condimentum facilisis porta.
-          Sed nec diam eu diam mattis viverra. Nulla fringilla, orci ac euismod semper, magna diam porttitor mauris, quis sollicitudin sapien justo in libero. Vestibulum mollis mauris enim. Morbi euismod magna ac lorem rutrum elementum. Donec viverra auctor lobortis. Pellentesque eu est a nulla placerat dignissim. Morbi a enim in magna semper bibendum. Etiam scelerisque, nunc. <br>
+          We started as a mastermind group for women leaders who wanted more than traditional networking. We focused on practical education, courage in leadership, and building confidence in business. 
         </p>
 
-        <h3 class="lead"id="anchor3">In the Press:</h3>
+        <h4>2018 - Expanding Horizons</h4>
+        <p>
+          As word spread, our academy grew to support entrepreneurs, professionals, and teams seeking inclusive strategies for growth. This period marked our expansion into leadership training, organizational development, and ethical business consulting.
+        </p>
+
+        <h4>2023 - Today</h4>
+        <p>
+          Now, The Intersectional Business Academy offers programs for individuals and organizations across industries—helping them achieve measurable growth while staying true to their values. 
+        </p>
+
+        <h3 class="lead" id="anchor2"> Our Philosophy: </h3>
+        <p>
+          We believe leadership is intersectional—it must recognize the whole person and the multiple roles they play. We teach strategies that are both data-informed and emotionally intelligent, blending business rigor with empathy. 
+        </p>
+        <p>
+          Our philosophy is simple: growth should not come at the expense of well-being or values. Every leader deserves access to tools that empower them to thrive at work, at home, and in their communities. 
+        </p>
+
+        <h3 class="lead" id="anchor3"> In the Press: </h3>
         <blockquote>
-          <em>Donec congue lacinia dui, a porttitor lectus condimentum oreet. Nunc eu ullamcorper orci. Quisque eget odio ac lectus e vestibulum faucibus et in metus. In pellentesque faucibus vestibulum. Nulla nulla justo, eget luctus tortor dolor sit amet lipsum odio lectus congue.</em>
+          <em>“The Intersectional Business Academy is changing the way leaders approach growth. Their blend of strategic insight, inclusivity, and humanity is exactly what today’s businesses need.”</em>
         </blockquote>
-        <p class="block-author"> MARCIA HERNANDEZ, CLIENT</p>
+        <p class="block-author"> BUSINESS LEADERSHIP MAGAZINE</p>
         <br><br>
-        <p>Sed nec diam eu diam mattis viverra. Nulla fringilla, orci ac euismod semper, magna diam porttitor mauris, quis sollicitudin sapien justo in libero. Vestibulum mollis mauris enim. Morbi euismod magna ac lorem rutrum elementum. Donec viverra auctor lobortis. Pellentesque eu est a nulla placerat dignissim. Morbi a enim in magna semper bibendum. Etiam scelerisque, nunc.</p></p>
+        <p>
+          The Academy continues to be recognized for its innovation in leadership development, ethical consulting, and cross-cultural business education. Our programs have been featured in community publications, business forums, and leadership panels across Canada. 
+        </p>
     </div>  
   </div>    
 </div>  
