--- a/team.html
+++ b/team.html
@@ -8,74 +8,82 @@ permalink: /team
 <div class="container">
   <div class="row">
     <div class="col-md-6">
+
       <div class="blockquote-box blockquote-info animated wow fadeInLeft clearfix">
         <div class="square pull-left">
-          <img src="../assets/img/team/member2.png" alt="Feature-img" height="80" width="100">
+          <img src="../assets/img/team/anna.png" alt="Feature-img" height="80" width="100">
         </div>
         <h4>
-          John Doe
+          Anna Ulitsky-Robson
         </h4>
         <p>
-          Web Developer , Technext
+          Founder & Chief Strategist, The Intersectional Business Academy
         </p>
       </div>
+
       <div class="blockquote-box blockquote-primary animated wow fadeInLeft clearfix">
         <div class="square pull-left">
-          <img src="../assets/img/team/member1.png" alt="Feature-img" height="80" width="100">
+          <img src="../assets/img/team/sophia.png" alt="Feature-img" height="80" width="100">
         </div>
         <h4>
-          Jane Ley
+          Sophia Martinez
         </h4>
         <p>
-          Software Developer , Technext
+          Director of Programs & Partnerships
         </p>
       </div>
+
       <div class="blockquote-box blockquote-success animated wow fadeInLeft clearfix">
         <div class="square pull-left">
-          <img src="../assets/img/team/member2.png" alt="Feature-img" height="80" width="100">
+          <img src="../assets/img/team/amir.png" alt="Feature-img" height="80" width="100">
         </div>
         <h4>
-          Jany Doe
+          Amir Khan
         </h4>
         <p>
-          App Developer , Technext
+          Leadership Development Coach
         </p>
       </div>
-  </div>
-  <div class="col-md-6">
-    <div class="blockquote-box blockquote-danger animated wow fadeInRight clearfix">
-      <div class="square pull-left">
-        <img src="../assets/img/team/member3.png" alt="Feature-img" height="80" width="100">
-      </div>
-      <h4>
-        John Doe
-      </h4>
-      <p>
-        Android Developer , Technext
-      </p>
+
     </div>
-    <div class="blockquote-box blockquote-warning animated wow fadeInRight clearfix">
-      <div class="square pull-left">
-        <img src="../assets/img/team/member2.png" alt="Feature-img" height="80" width="100">
+    <div class="col-md-6">
+
+      <div class="blockquote-box blockquote-danger animated wow fadeInRight clearfix">
+        <div class="square pull-left">
+          <img src="../assets/img/team/lisa.png" alt="Feature-img" height="80" width="100">
+        </div>
+        <h4>
+          Lisa Chen
+        </h4>
+        <p>
+          Community Engagement & Events Lead
+        </p>
       </div>
-      <h4>
-        Chris Way
-      </h4>
-      <p>
-        iOS Developer , Technext
-      </p>
-    </div>
-    <div class="blockquote-box animated wow fadeInRight clearfix">
-      <div class="square pull-left">
-        <img src="../assets/img/team/member1.png" alt="Feature-img" height="80" width="100">
+
+      <div class="blockquote-box blockquote-warning animated wow fadeInRight clearfix">
+        <div class="square pull-left">
+          <img src="../assets/img/team/michael.png" alt="Feature-img" height="80" width="100">
+        </div>
+        <h4>
+          Michael Johnson
+        </h4>
+        <p>
+          Business Systems & Operations Manager
+        </p>
       </div>
-      <h4>
-        Christopher
-      </h4>
-      <p>
-        Web Developer , Technext
-      </p>
+
+      <div class="blockquote-box animated wow fadeInRight clearfix">
+        <div class="square pull-left">
+          <img src="../assets/img/team/fatima.png" alt="Feature-img" height="80" width="100">
+        </div>
+        <h4>
+          Fatima Ali
+        </h4>
+        <p>
+          DEI & Organizational Design Specialist
+        </p>
       </div>
+
     </div>
   </div>
 </div>
