update team second try

--- a/team.html
+++ b/team.html
@@ -8,10 +8,10 @@ permalink: /team
 <div class="container">
   <div class="row">
     <div class="col-md-6">
-
+      
       <div class="blockquote-box blockquote-info animated wow fadeInLeft clearfix">
         <div class="square pull-left">
-          <img src="../assets/img/team/anna.png" alt="Feature-img" height="80" width="100">
+          <img src="assets/img/team/anna.jpg" alt="Feature-img" height="80" width="100">
         </div>
         <h4>
           Anna Ulitsky-Robson
@@ -23,7 +23,7 @@ permalink: /team
 
       <div class="blockquote-box blockquote-primary animated wow fadeInLeft clearfix">
         <div class="square pull-left">
-          <img src="../assets/img/team/sophia.png" alt="Feature-img" height="80" width="100">
+          <img src="assets/img/team/sophia.jpg" alt="Feature-img" height="80" width="100">
         </div>
         <h4>
           Sophia Martinez
@@ -35,7 +35,7 @@ permalink: /team
 
       <div class="blockquote-box blockquote-success animated wow fadeInLeft clearfix">
         <div class="square pull-left">
-          <img src="../assets/img/team/amir.png" alt="Feature-img" height="80" width="100">
+          <img src="assets/img/team/amir.jpg" alt="Feature-img" height="80" width="100">
         </div>
         <h4>
           Amir Khan
@@ -50,7 +50,7 @@ permalink: /team
 
       <div class="blockquote-box blockquote-danger animated wow fadeInRight clearfix">
         <div class="square pull-left">
-          <img src="../assets/img/team/lisa.png" alt="Feature-img" height="80" width="100">
+          <img src="assets/img/team/lisa.jpg" alt="Feature-img" height="80" width="100">
         </div>
         <h4>
           Lisa Chen
@@ -62,7 +62,7 @@ permalink: /team
 
       <div class="blockquote-box blockquote-warning animated wow fadeInRight clearfix">
         <div class="square pull-left">
-          <img src="../assets/img/team/michael.png" alt="Feature-img" height="80" width="100">
+          <img src="assets/img/team/michael.jpg" alt="Feature-img" height="80" width="100">
         </div>
         <h4>
           Michael Johnson
@@ -74,7 +74,7 @@ permalink: /team
 
       <div class="blockquote-box animated wow fadeInRight clearfix">
         <div class="square pull-left">
-          <img src="../assets/img/team/fatima.png" alt="Feature-img" height="80" width="100">
+          <img src="assets/img/team/fatima.jpg" alt="Feature-img" height="80" width="100">
         </div>
         <h4>
           Fatima Ali
