--- a/team.html
+++ b/team.html
@@ -5,6 +5,7 @@ permalink: /team
 <!-- Main Container -->
 
 <div id="banners"></div>
+<a href="#anchor1"> Our Team</a><br>
 <div class="container">
   <div class="row">
     <div class="col-md-6">
