--- a/team.html
+++ b/team.html
@@ -8,7 +8,7 @@ permalink: /team
 
 <div class="container">
   <div class="row">
-    <a href="#anchor1"> Our Team</a><br>
+    <h3 class="lead"> Our Story </h3><hr>
     <div class="col-md-6">
       <div class="blockquote-box blockquote-info animated wow fadeInLeft clearfix">
         <div class="square pull-left">
