update footer copyright and team member details

--- a/team.html
+++ b/team.html
@@ -8,7 +8,7 @@ permalink: /team
 
 <div class="container">
   <div class="row">
-    <h3 class="lead"> Our Story </h3><hr>
+    <h3 class="lead" style="padding-left: 20px;"> Our Team </h3><hr>
     <div class="col-md-6">
       <div class="blockquote-box blockquote-info animated wow fadeInLeft clearfix">
         <div class="square pull-left">
@@ -18,7 +18,7 @@ permalink: /team
           Anna Ulitsky-Robson
         </h4>
         <p>
-          Founder & Chief Strategist, The Intersectional Business Academy
+          Founder & Chief Strategist
         </p>
       </div>
 
@@ -34,20 +34,20 @@ permalink: /team
         </p>
       </div>
 
-      <div class="blockquote-box blockquote-success animated wow fadeInLeft clearfix">
+      <div class="blockquote-box blockquote-warning animated wow fadeInRight clearfix">
         <div class="square pull-left">
-          <img src="assets/img/team/amir.jpg" alt="Feature-img" height="80" width="100">
+          <img src="assets/img/team/michael.jpg" alt="Feature-img" height="80" width="100">
         </div>
         <h4>
-          Amir Khan
+          Michael Johnson
         </h4>
         <p>
-          Leadership Development Coach
+          Business Systems & Operations Manager
         </p>
       </div>
 
     </div>
-    <div class="col-md-6">
+<!--     <div class="col-md-6">
 
       <div class="blockquote-box blockquote-danger animated wow fadeInRight clearfix">
         <div class="square pull-left">
@@ -61,15 +61,15 @@ permalink: /team
         </p>
       </div>
 
-      <div class="blockquote-box blockquote-warning animated wow fadeInRight clearfix">
+      <div class="blockquote-box blockquote-success animated wow fadeInLeft clearfix">
         <div class="square pull-left">
-          <img src="assets/img/team/michael.jpg" alt="Feature-img" height="80" width="100">
+          <img src="assets/img/team/amir.jpg" alt="Feature-img" height="80" width="100">
         </div>
         <h4>
-          Michael Johnson
+          Amir Khan
         </h4>
         <p>
-          Business Systems & Operations Manager
+          Leadership Development Coach
         </p>
       </div>
 
@@ -85,7 +85,7 @@ permalink: /team
         </p>
       </div>
 
-    </div>
+    </div> -->
   </div>
 </div>
 <!--End Main Container -->
