Remove commented-out links and update image sources for consistency across pages

--- a/team.html
+++ b/team.html
@@ -22,7 +22,7 @@ permalink: /team
         </p>
       </div>
 
-      <div class="blockquote-box blockquote-primary animated wow fadeInLeft clearfix">
+<!--       <div class="blockquote-box blockquote-primary animated wow fadeInLeft clearfix">
         <div class="square pull-left">
           <img src="assets/img/team/sophia.jpg" alt="Feature-img" height="80" width="100">
         </div>
@@ -45,7 +45,7 @@ permalink: /team
           Business Systems & Operations Manager
         </p>
       </div>
-
+ -->
     </div>
 <!--     <div class="col-md-6">
 
