--- a/services.html
+++ b/services.html
@@ -5,7 +5,7 @@ published: true
 ---
 <!-- Main Container -->
 <div class="row container-kamn">
-  <img src="assets/img/slider/slide3.jpg" class="blog-post" alt="Services-img" align="right" width="100%"> 
+  <img src="../assets/img/slider/nslider2.png" class="blog-post" alt="Services-img" align="right" width="100%"> 
 </div>
 
 <div id="banners"></div>
